# celo-hackathon-agent

./: .cursorrules  .env.template  .gitignore  CHANGELOG.md  Makefile  README.md  alembic.ini  api.py  config.json  create_sample_data.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py  run_agent.py  run_agents.py  start.sh  test_gitingest.py  worker.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
api/: .env.example  README.md  __init__.py  alembic.ini  docker-compose.yml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 2965a599d610_add_analysis_type.py  7d437d84bb5d_add_analysis_type.py  fe7340288808_initial_schema_with_analysis_type.py
api/app/: __init__.py  config.py  main.py  worker.py
api/app/db/: models.py  session.py
api/tests/: test_health.py
apps/frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
config/: env.development  env.production  env.template
docker/api/: Dockerfile
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docker/postgres/: init.sql
docs/: CONTRIBUTING.md  DEPLOYMENT.md  MIGRATION.md
migrations/: env.py
migrations/versions/: 948bd2504849_add_worker_id_and_priority_columns_to_.py
scripts/: build.sh  clean.sh  dev-setup.sh  docker-dev.sh  install.sh  test.sh  update-test.sh
src/: analyzer.py  cli.py  config.py  fetcher.py  file_parser.py  updated_metrics_formatter.py
src/agents/: __init__.py  celo_agent.py  code_quality_agent.py  coordinator.py  orchestrator.py  repo_agent.py  reporting_agent.py
src/analyzer/: celo_detector.py  github_repo.py
src/reporting/: report_generator.py
src/tools/: __init__.py  all_tools.py
(+42 files in other folders)
