[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-project-analyzer-workspace"
version = "0.1.0"
description = "Monorepo workspace for AI Project Analyzer"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "dotenv>=0.9.9",
    "gitingest>=0.1.5",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "pandas>=2.3.1",
    "pygithub>=2.6.1",
]

# Prevent setuptools from trying to build packages in this workspace root
[tool.setuptools]
packages = []

# Workspace configuration
[tool.workspace]
packages = [
    "packages/core",
    "packages/cli", 
    "packages/api",
    "packages/frontend"
]

# Shared development dependencies across all Python packages
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.12.1",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",  # for API testing
]

[tool.ruff]
line-length = 100
target-version = "py311"

# Shared configuration for all packages
[tool.ruff.lint]
# Focus on the most important rules while avoiding monorepo false positives
select = ["F", "E4", "E7", "E9", "W6", "B", "I"]
ignore = [
    "E402",  # Module level import not at top of file (needed for monorepo sys.path)
    "F401",  # Imported but unused (common in __init__.py files)  
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"

# Merged into main dependency-groups section above
